@@ -346,7 +346,7 @@ static void process_socket(apr_pool_t *p, apr_socket_t *sock, int my_child_num)
     }
 
     ap_create_sb_handle(&sbh, p, 0, my_child_num);
-    current_conn = ap_run_create_connection(p, ap_server_conf, sock, conn_id, sbh);
+    current_conn = ap_new_connection(p, ap_server_conf, sock, conn_id, sbh);
 
     if (current_conn) {
         ap_process_connection(current_conn);
